PLT-4855 (#4708) Fix overlapping emoji reactions

--- a/webapp/sass/layout/_post.scss
+++ b/webapp/sass/layout/_post.scss
@@ -1244,10 +1244,6 @@
     min-width: 320px;
 }
 
-.post-reaction-list {
-    height: 24px;
-}
-
 .post-reaction {
     border: 1px solid $primary-color;
     border-radius: 3px;
